:bento: add icon

--- a/content/CW.LibTpl.nuspec
+++ b/content/CW.LibTpl.nuspec
@@ -9,9 +9,14 @@
     <authors>Catcher Wong</authors>
     <owners>Catcher Wong</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <license type="expression">MIT</license>
+    <license type="expression">Apache-2.0</license>
+      <projectUrl>https://github.com/cwtreasure/LibTpl</projectUrl>
+    <icon>icon.png</icon>
     <packageTypes>
       <packageType name="Template" />
     </packageTypes>
   </metadata>
+  <files>
+      <file src="**" target="" />
+  </files>
 </package>
